src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_input_epic_title_form.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 2 [ ]                 ◦ RUNNING 1                   ◦ REVIEW 0                     ◦ DONE 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
╭────────────────────────────╮│  ── active                │                              │╭────────────────────────────╮
│  ▌ #1 Task 1               ││╭─────────────────────────╮│                              ││  ▎ #4 Task 4               │
│   ◦ <1h                    │││  ▎ #3 Task 3            ││                              ││   ✓ <1h                    │
╰────────────────────────────╯││   ◉ running             ││                              │╰────────────────────────────╯
╭────────────────────────────╮│╰─────────────────────────╯│                              │
│  ▎ #2 Task 2               ││                           │                              │
│   ◦ <1h                    ││                           │                              │
╰────────────────────────────╯│                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
╭ New Epic ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  Title: My new epic                                                                                                  │
│                                                                                                                      │
│  [Enter] confirm  [Esc] cancel                                                                                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Creating epic: enter title
