src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_input_repo_path_form.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 2 [ ]                 ◦ RUNNING 1                   ◦ REVIEW 0                     ◦ DONE 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task 1                 │  ▎ #3 Task 3              │                              │  ▎ #4 Task 4
   ◦ <1h                      │   ◉ running               │                              │   ✓ <1h
──────────────────────────────│───────────────────────────│                              │──────────────────────────────
  ▎ #2 Task 2                 │                           │                              │
   ◦ <1h                      │                           │                              │
──────────────────────────────│                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
╭ New Task ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  Title: My new task                                                                                                  │
│  Tag: feature                                                                                                        │
│  Description: A description                                                                                          │
│  Repo path:                                                                                                          │
│  ► /repo/alpha                                                                                                       │
│    /repo/beta                                                                                                        │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Creating task: enter repo path
