src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_learnings_list_view.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task ╭ Knowledge Base ──────────────────────────────────────────────────────────────────────────────╮
   ◦ <1h    │┌ Knowledge Base (2) — sorted by upvotes ────────────────────────────────────────────────────┐│
────────────││[h] Prefer concise responses over verbose ones  ↑3  global                                  ││────────────
  ▎ #2 Task ││[!] tokio::spawn needs explicit error logging  ↑1  repo:repo                                ││
   ◦ <1h    ││                                                                                            ││
────────────││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            │ Tab:tree  j/k:nav  e:edit  x:reject  A:archive  q:close─────────────────────────────────────┘│
            │ Detail ──────────────────────────────────────────────────────────────────────────────────────│
            │[h] Prefer concise responses over verbose ones                                                │
            │                                                                                              │
            │This helps agents stay focused.                                                               │
            │                                                                                              │
────────────│status:approved  scope:global  upvotes:3                                                      │────────────
            │tags: style                                                                                   │
            │                                                                                              │
            │                                                                                              │
            ╰──────────────────────────────────────────────────────────────────────────────────────────────╯



[Space] brainstorm  [e]dit  [L] move  [x] archive  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [s]
