src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_learnings_tree_view.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task ╭ Knowledge Base ──────────────────────────────────────────────────────────────────────────────╮
   ◦ <1h    │┌ Knowledge Base — hierarchy view (2) ───────────────────────────────────────────────────────┐│
────────────││▼ Global (1)                                                                                ││────────────
  ▎ #2 Task ││    [h] Prefer concise responses over verbose ones  ✓3                                      ││
   ◦ <1h    ││▼ Repo: repo (1)                                                                            ││
────────────││    [!] tokio::spawn needs explicit error logging  ✓1                                       ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            │ Tab:list  h/l:collapse/expand  j/k:nav  e:edit  x:reject  A:archive  q:close────────────────┘│
            │ Detail ──────────────────────────────────────────────────────────────────────────────────────│
            │No learning selected                                                                          │
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
────────────│                                                                                              │────────────
            │                                                                                              │
            │                                                                                              │
            │                                                                                              │
            ╰──────────────────────────────────────────────────────────────────────────────────────────────╯



[Space] brainstorm  [e]dit  [L] move  [x] archive  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [s]
