src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_move_task_to_epic_popup.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 3 [ ]                 ◦ RUNNING 0                   ◦ REVIEW 0                     ◦ DONE 0
──────────────────────────────╭ Move task: "Task 1" ─────────────────────────────────────╮──────────────────────────────
╭────────────────────────────╮│  — no parent —                                           │
│  ▌ #1 Task 1               ││  Platform                                                │
│   ◦ <1h                    ││  Backend                                                 │
╰────────────────────────────╯│                                                          │
╭────────────────────────────╮│                                                          │
│  ▎ #10 Platform            ││                                                          │
│    no subtasks             ││                                                          │
╰────────────────────────────╯│                                                          │
╭────────────────────────────╮│                                                          │
│  ▎ #20 Backend             ││                                                          │
│    no subtasks             ││                                                          │
╰────────────────────────────╯│                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
──────────────────────────────│                                                          │──────────────────────────────
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │                                                          │
                              │ j/k:navigate  l/Space/→:expand  h/←:collapse  Enter:selec│
                              ╰──────────────────────────────────────────────────────────╯

Select target epic: navigate tree above, Enter to select
